# caldav-mcp

./: Dockerfile  pyproject.toml
src/mcp_caldav/: __init__.py  app.py  client.py  database.py  ics_client.py  models.py  rest_api.py  server.py  settings.py
